# mypy_primer

./: .gitignore  LICENSE  README.md  README.md.  mypy_primer.py  primer.py  pyproject.toml  setup.py  test.sh  tox.ini
.github/workflows/: tests.yml
mypy_primer/: __init__.py  __main__.py  git_utils.py  globals.py  main.py  model.py  projects.py  projects.toml  type_checker.py  utils.py
pydoctor_primer/: __main__.py  git_utils.py  globals.py  main.py  model.py  projects.py  type_checker.py  utils.py
